@@ -1,11 +1,10 @@
 Package: MonetDB.R
 Version: 0.9.5
-Date: 2014-07-24
 Title: Connect MonetDB to R
 Authors@R: c(person("Hannes Muehleisen", role = c("aut", "cre"),email = "hannes@cwi.nl"),
 	person("Thomas Lumley", role = "ctb"),
 	person("Anthony Damico", role = "ctb"))
-Depends: DBI (>= 0.2-7), digest (>= 0.6.4), methods
+Depends: DBI (>= 0.3), digest (>= 0.6.4), bitops (>= 1.0), methods
 Description: Allows to pull data from MonetDB into R
 License: MPL (== 1.1)
 URL: http://monetr.r-forge.r-project.org
